June 13 2005 - John_K
	- Added tinyxml
	- Added nidDb class to enable NID name resolution
	- Fixed compiler warnings
	
June 12 2005 - John_K
	- Removed routine to find string tables, I was blind and missed the fact that the index to it
	  in the sections list is in the elf header.
	
June 2 2005 - John_K
	- Properly fixed previous branch offsets problem by providing section vma to disasssembly
	  info struct and letting libopcodes use it's own memory read function.
	- Fixed erroneous xrefs to 0x00000000, althought current method may weed out certain valid xrefs to 0.
	
June 1 2005 - John_K
	- Changed pspdis.c to C++ to use STL and to prepare for wxWidgets
	- Added a note to branch offsets in disassembly that libopcodes bases off of filebuffer
	  memory address. Does anyone know how to remedy this properly?
	- Added xref tracking and report
	
June 1 2005 - John_K
	- Initial Version