@@ -25,9 +25,16 @@ extern "C" {
 
 #define makehexchar(i) (i<=9) ? '0'+(i) : 'A'+((i)-10)
 
+/*
+this is bad, doesnt work on 64bit archs, etc
 typedef unsigned char u8;
 typedef unsigned short u16;
 typedef unsigned long u32;
+*/
+#include <stdint.h>
+typedef uint8_t u8;
+typedef uint16_t u16;
+typedef uint32_t u32;
 
 void hexdump(const u8* data, size_t length);
 
